Swagger documentation slightly updated, no new functionalities
